--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://set-list.github.io/robofriends",
   "dependencies": {
     "ajv": "^6.5.3",
     "ajv-keywords": "^3.2.0",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
@@ -15,6 +17,8 @@
     "tachyons": "^4.11.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
