added components and testing

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://set-list.github.io/robofriends",
+  "homepage": "https://set-list.github.io/robofriends",
   "dependencies": {
     "ajv": "^6.5.3",
     "ajv-keywords": "^3.2.0",
@@ -17,11 +17,16 @@
     "tachyons": "^4.11.1"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
